# mysql-icu

./: .hgignore  AUTHORS  Doxyfile  README  autogen.sh  configure.in  mysqlicu.kdevelop  mysqlicu.kdevses
share/: my.txt  myword.txt
src/: Makefile.am  ctype-icu.c  mysql-icu-plugin.c  word-brk-iter.cpp  word-brk-iter.h
templates/: cpp  h
test/: collate_my_MM.sql  collate_my_MMucs2.expected  collate_my_MMucs2.sql  createTestDb.sql  ftMatch.expected  ftMatch.sql  ftMatchUcs2.expected  ftMatchUcs2.sql  likeTest.expected  likeTest.sql  likeTestUcs2.expected  likeTestUcs2.sql  runTests.sh
