INCLUDES = 
METASOURCES = AUTO
pkgplugindir=$(MYSQL_PLUGIN_DIR)
pkgplugin_LTLIBRARIES = libmysql-icu.la

#EXTRA_CFLAGS = -DHAVE_UNICODE_UCOL_H -DHAVE_CHARSET_ucs2 -DHAVE_CHARSET_utf8
EXTRA_CFLAGS = -DHAVE_CHARSET_utf8 -DMYSQL_DYNAMIC_PLUGIN

libmysql_icu_la_CFLAGS = $(ICU_CFLAGS) $(MYSQL_CFLAGS) $(EXTRA_CFLAGS)
libmysql_icu_la_LDFLAGS = $(ICU_LDFLAGS) $(MYSQL_LDFLAGS)
libmysql_icu_la_SOURCES = ctype-icu.c mysql-icu-plugin.c
